<resources>
    <string name="app_name">WeList</string>
    <string name="action_settings">Settings</string>
    <string name="action_fulfilled">Fulfilled</string>
    <string name="action_favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello!</string>
    <string name="create_wishlist">Create a New Wish List</string>
    <string name="new_item">New Item</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="price">Price</string>
    <string name="link">Video Review from Youtube</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="submit">Submit</string>
    <string name="delete_button">Delete All Wishlist</string>
    <string name="play_video">Play Video</string>
    <string name="new_wishlist">Added a New Wish List</string>
    <string name="wishlist_type">Wish List Type</string>
    <string name="short_term">Short Term Wish List</string>
    <string name="long_term">Long Term Wish List</string>
    <string name="empty_state">Ooops! Empty</string>
    <string name="empty_state_2">You dont have any wish list</string>
    <string name="quotes_of_the_day">Motivational Quotes</string>
    <string name="permission">Permission denied</string>
    <string name="required">This field is required</string>
    <string name="permission_rationale">Permission to access the external storage is needed. Without this permission the app is unable to access your gallery.</string>
    <string name="permission_required">Permission Required</string>
    <string name="ask_for_wifi">Using data over a mobile data may incur additional fees.</string>
    <string name="title_ask_for_wifi">Play Video Using Mobile Data?</string>
    <string name="ask_for_connection">To play this video, you need connected to the internet.</string>
    <string name="title_dialog">Warning</string>
    <string name="connect_wifi">Connect to Wifi</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="mobile_data">Turn On Mobile Data</string>
    <string name="music_of_the_day">Music of The Day</string>
    <string name="create_reminder">Set Reminder Sale Time of Wishlist Item of The Day</string>
    <string name="title_reminder">Reminder</string>
    <string name="set_reminder">Set Alarm</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="empty_state_reminder">Alarm is not set yet</string>
    <string name="state_reminder">Alarm set to:</string>

</resources>
