<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/brokenWhite"
            tools:context=".view.CreateListFragment">

            <TextView
                android:id="@+id/newItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_item"
                android:textColor="@color/blue"
                android:textSize="48sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.046" />

            <ImageView
                android:id="@+id/imageViewCreate"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newItem" />

            <TextView
                android:id="@+id/itemTitleCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="104dp"
                android:text="@string/title"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewCreate" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="360dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/itemTitleCreate"
                app:layout_constraintTop_toBottomOf="@+id/itemTitleCreate" />

            <TextView
                android:id="@+id/notesTitleCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/notes"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

            <EditText
                android:id="@+id/editTextNotes"
                android:layout_width="360dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/notesTitleCreate"
                app:layout_constraintTop_toBottomOf="@+id/notesTitleCreate" />

            <TextView
                android:id="@+id/priceTitleCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/price"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNotes" />

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="360dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/priceTitleCreate"
                app:layout_constraintTop_toBottomOf="@+id/priceTitleCreate" />

            <TextView
                android:id="@+id/linkTitleCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/link"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

            <EditText
                android:id="@+id/editTextLink"
                android:layout_width="360dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/linkTitleCreate"
                app:layout_constraintTop_toBottomOf="@+id/linkTitleCreate" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_button"
                android:text="@string/submit"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLink" />

            <Button
                android:id="@+id/buttonPhotos"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button"
                android:text="@string/choose_picture"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewCreate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>